<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.13</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.microsoft.openai.samples.rag</groupId>
	<artifactId>search-demo-java</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>openai-search-demo-java</name>
	<description>This sample demonstrates a few approaches for creating ChatGPT-like experiences over your own data using the Retrieval Augmented Generation pattern</description>
	<properties>
		<java.version>17</java.version>
		<spring-cloud-azure.version>4.9.0</spring-cloud-azure.version>
		<azure-search.version>11.6.0-beta.6</azure-search.version>
		<azure-openai.version>1.0.0-beta.2</azure-openai.version>
		<semantic-kernel.version>0.2.8-alpha</semantic-kernel.version>
		<mockito-inline.version>4.5.1</mockito-inline.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.azure.spring</groupId>
				<artifactId>spring-cloud-azure-dependencies</artifactId>
				<version>${spring-cloud-azure.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.microsoft.semantic-kernel</groupId>
				<artifactId>semantickernel-bom</artifactId>
				<version>${semantic-kernel.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>${mockito-inline.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
		</dependency>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-search-documents</artifactId>
			<version>${azure-search.version}</version>
		</dependency>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-ai-openai</artifactId>
			<version>${azure-openai.version}</version>
		</dependency>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
		</dependency>

		<!-- Semantic Kernel start-->
		<dependency>
			<groupId>com.microsoft.semantic-kernel</groupId>
			<artifactId>semantickernel-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.microsoft.semantic-kernel</groupId>
			<artifactId>semantickernel-core</artifactId>
			<!-- TODO: scope should be runtime, but VolatileMemoryStore is an issue -->
			<!-- <scope>runtime</scope> -->
		</dependency>
		<dependency>
			<groupId>com.microsoft.semantic-kernel</groupId>
			<artifactId>semantickernel-connectors-ai-openai</artifactId>
		</dependency>

		<dependency>
			<groupId>com.microsoft.semantic-kernel</groupId>
			<artifactId>semantickernel-planners</artifactId>
		</dependency>
		<!-- Semantic Kernel end -->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>